@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.tele5_de" name="Tele5 Mediathek" version="1.5.1" provider-name="w4ki and a little bit of realvito">
+<addon id="plugin.video.tele5_de" name="Tele5 Mediathek" version="1.5.2" provider-name="w4ki and a little bit of realvito">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.beautifulsoup4"/>
@@ -25,8 +25,9 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.5.1  (30.06.2019)[/COLOR][/B] by w4ki + realvito[CR]
-- fixed: Auf Windowssystemen kommt es zu Problemen mit Jahrgängen vor 1970 (Filmordner lässt sich nicht öffnen)
+		<news>[B][COLOR orangered]Version 1.5.2  (08.07.2019)[/COLOR][/B] by w4ki + realvito[CR]
+- added: SchleFaZ Mediathek
+- removed: SchleFaZ in Filme als Unterverzeichnis
 		</news>
 	</extension>
 </addon>
